# CircuitPython_nRF24L01

./: .cspell.config.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.rst  circuitpython_nrf24l01.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  release.yml
CircuitPython_nRF24L01/: nRF24L01.py
circuitpython_nrf24l01/: __init__.py  data_manip.py  fake_ble.py  logitech_mouse.py  mixin.py  registers.py  rf24.py  rf24_lite.py  rf24_m0.py  rf24_mesh.py  rf24_network.py  sniffer.py
circuitpython_nrf24l01/fake_ble/: fake_ble.py
circuitpython_nrf24l01/network/: constants.py  mixins.py  network_mixin.py  packet_structs.py  queue.py  rf24_mesh.py  rf24_network.py  structs.py
circuitpython_nrf24l01/wrapper/: __init__.py  cpy_rpi_gpio.py  cpy_spidev.py  upy_pin.py  upy_spi.py
cli-tools/: file_transfer.py
docs/: advanced_api.rst  api.rst  basic_api.rst  ble_api.rst  conf.py  configure_api.rst  examples.rst  greetings.rst  index.rst  logitech.rst  network_api.rst  recipes.rst  requirements.txt  sphinx_immaterial-0.0.post1.dev3-py3-none-any.whl  sphinx_immaterial-0.0.post1.dev4-py3-none-any.whl  troubleshooting.rst  using_logger.rst
docs/_static/: Logo large.xcf  Logo.xcf  custom_material.css  dark_material.css  darkness.css
docs/core_api/: advanced_api.rst  basic_api.rst  ble_api.rst  configure_api.rst
docs/network_docs/: base_api.rst  constants.rst  mesh_api.rst  network_api.rst  shared_api.rst  structs.rst  topology.rst  using_logger.rst
docs/social_cards/layouts/: custom.yml
examples/: nrf24l01_2arduino_handling_data.py  nrf24l01_ack_payload_test.py  nrf24l01_context_test.py  nrf24l01_fake_ble_test.py  nrf24l01_interrupt_test.py  nrf24l01_logitech_mouse_test.py  nrf24l01_manual_ack_test.py  nrf24l01_mesh_simple_test.py  nrf24l01_multiceiver_test.py  nrf24l01_network_simple_test.py  nrf24l01_network_test.py  nrf24l01_scanner_test.py  nrf24l01_simple_test.py  nrf24l01_sniffer_test.py  nrf24l01_stream_test.py
examples/ack_payloads/: m4_test.py  pi_test.py
examples/context/: m4_test.py  pi_test.py
examples/fakeBLE/: m4_test.py
examples/interrupt/: m4_test.py  pi_test.py
examples/nrf24l01_network/: simple_test.py
examples/simple/: m4_test.py  pi_test.py
examples/stream/: m4_test.py  pi_test.py
recipes/: wireless_hid_hub.py  wireless_hid_mouse.py  wireless_hid_peripheral.py
tests/: conftest.py  requirements.txt  test_ble_helpers.py  test_fake_ble.py  test_helpers.py  test_net_structs.py  test_rf24.py  test_rf24mesh.py  test_rf24network.py  test_structs.py
